--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 										<br><a href="RDE10_Andre_Augusto_Gavlak.html" target="_blank"><b>RDE10 - Cascading Style Sheets - CSS</b></a><br>
 										<br><a href="RDE12_Andre_Augusto_Gavlak.html" target="_blank"><b>RDE12 - CSS - Elementos block-level, inline e Seletores Personalizados</b></a><br>
 										<br><a href="RDE13_Andre_Augusto_Gavlak.html" target="_blank"><b>RDE13 - CSS - Box Model e Posicionamento</b></a><br>
-										<br><a href="RDE14_Andre_Augusto_Gavlak.html" target="_blank"><b>RDE14 - Layouts com CSS</b></a><br><br>
+										<br><a href="RDE14_Andre_Augusto_Gavlak.html" target="_blank"><b>RDE14 - Layouts com CSS</b></a><br>
+										<br><a href="RDE15_Andre_Augusto_Gavlak.html" target="_blank"><b>RDE15 - JavaScript</b></a><br>
+										<br><a href="RDE16_Andre_Augusto_Gavlak.html" target="_blank"><b>RDE16 - JavaScript - DOM - Manipulação de Formulários</b></a><br><br>
 									</div>
 										
 										
