--- a/RDE15_Andre_Augusto_Gavlak.html
+++ b/RDE15_Andre_Augusto_Gavlak.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="img/AAG.ico" type="image/x-icon">
-    <title>Java Script</title>
+    <title>RDE15 - Java Script</title>
 	<script rel="text/javascript">
         confirm("Olá, Gostaria de nos ajudar a responder algumas perguntas enquanto utilizamos a linguagem Java Script?")
     </script>
